; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/nvd/extr_nvd.c_nvd_dump.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/nvd/extr_nvd.c_nvd_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.disk = type { %struct.nvd_disk* }
%struct.nvd_disk = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i32, i64)* @nvd_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvd_dump(i8* %0, i8* %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca %struct.disk*, align 8
  %12 = alloca %struct.nvd_disk*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = bitcast i8* %13 to %struct.disk*
  store %struct.disk* %14, %struct.disk** %11, align 8
  %15 = load %struct.disk*, %struct.disk** %11, align 8
  %16 = getelementptr inbounds %struct.disk, %struct.disk* %15, i32 0, i32 0
  %17 = load %struct.nvd_disk*, %struct.nvd_disk** %16, align 8
  store %struct.nvd_disk* %17, %struct.nvd_disk** %12, align 8
  %18 = load %struct.nvd_disk*, %struct.nvd_disk** %12, align 8
  %19 = getelementptr inbounds %struct.nvd_disk, %struct.nvd_disk* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i8*, i8** %7, align 8
  %22 = load i32, i32* %9, align 4
  %23 = load i64, i64* %10, align 8
  %24 = call i32 @nvme_ns_dump(i32 %20, i8* %21, i32 %22, i64 %23)
  ret i32 %24
}

declare dso_local i32 @nvme_ns_dump(i32, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
